# llaplace_df

./: .gitignore  LICENSE  README.md  USAGE.md  chirp_modal_method_update.md  cmd_plan_v2.md  plan_v2_implementation.md  pyproject.toml  run.sh  start_session.sh  w.sh
finetuning/: README.md  common.py  eval_sampling.py  final_eval.py  run_trial.py  search_spaces.py  tune.py
llapdiffusion/: __init__.py  benchmark_protocol.py  diffusion_cache.py  logging_utils.py  pipeline.py  target_artifacts.py
llapdiffusion/baselines/: __init__.py  data.py  features.py  metrics.py  registry.py  runner.py  sources.py
llapdiffusion/configs/: __init__.py  config.py  config_utils.py  dataset_archives.py  dataset_defaults.py  dataset_registry.py
llapdiffusion/datasets/: US_Equity.txt  __init__.py  _normalization.py  bms_air_dataset.py  dataset_summary.py  fin_dataset.py  noaa_isd_dataset.py  physionet_cinc_dataset.py  synthetic_regime_dataset.py  target_selection.py  uci_air_quality_dataset.py
llapdiffusion/latent_space/: __init__.py  latent_vae.py  latent_vae_utils.py
slurm/: log.txt  physonet_e.txt
tests/: test_baselines.py  test_checkpoint_eval_predict_type.py  test_chirp_modal.py  test_chirp_parameterizations.py  test_chirp_uq.py  test_fixed_loader_policies.py  test_growth_budget.py  test_llapdiff_cache_equivalence.py  test_llapdiff_speed_options.py  test_pole_conditioning.py  test_pole_recovery.py  test_progress_logging.py  test_synthetic_chirp_benchmark.py  test_time_leakage_rope.py  test_x0_pipeline_parameterization.py
w_docs/: CMD_RUNBOOK.md  DEVELOPER_GUIDE.md  USAGE.md  Untitled  chirp_fix_finding1_stability_head.md  chirp_fix_finding1_stability_head_corrected.md  chirp_fix_finding2_basis_scale.md  h2_pole_recovery_problems_fixes.md  w_note.txt
w_plan/: chirp_modal_method_update.md
(+36 files in other folders)
