[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llapdiffusion"
version = "0.1.0"
description = "Latent Laplace Diffusion for irregular multivariate time series"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "LLapDiffusion contributors" }]
dependencies = [
  "torch",
  "numpy",
  "pandas",
  "matplotlib",
  "pyarrow",
  "fastparquet",
  "yfinance",
  "requests",
  "tqdm",
]

[project.optional-dependencies]
dev = ["pytest"]
noaa-download = ["isd-fetch"]
baselines = [
  "torchcde",
  "torchdiffeq",
  "linear-attention-transformer",
  "reformer-pytorch",
  "gluonts",
  "lightning",
  "scikit-learn",
  "utilsd",
]
baselines-dev = [
  "pytest",
  "torchcde",
  "torchdiffeq",
  "linear-attention-transformer",
  "reformer-pytorch",
  "gluonts",
  "lightning",
  "scikit-learn",
  "utilsd",
]

[project.scripts]
llapdiff-train = "llapdiffusion.pipeline:cli_main"
llapdiff-checkpoint-eval = "llapdiffusion.tools.llapdiff_checkpoint_eval:main"
llapdiff-artifact-prep = "llapdiffusion.tools.run_multidataset_artifact_prep:main"
llapdiff-synthetic-regime = "llapdiffusion.tools.run_synthetic_regime_shift:main"
llapdiff-synthetic-chirp = "llapdiffusion.tools.run_synthetic_chirp_benchmark:main"
llapdiff-uq-eval = "llapdiffusion.tools.run_analytic_uq_eval:main"
llapdiff-u1-sweep = "llapdiffusion.tools.run_u1_sweep:main"
llapdiff-plot-poles = "llapdiffusion.viz.plot_llapdiff_poles:main"
llapdiff-baselines = "llapdiffusion.tools.run_baselines:main"

[tool.setuptools.packages.find]
include = ["llapdiffusion*"]

[tool.setuptools.package-data]
"llapdiffusion.datasets" = ["*.txt", "*.zip"]
